# mwc

./: .gitignore  Makefile  README.md  compile_flags.txt  default.conf  known-issues.md  meson.build  mwc.desktop  notwc.desktop  todo.txt
examples/: active-toplevel.sh  active-workspace.sh  example.conf  fix-portals.sh
mwc-ipc/: mwc-ipc.c
notwc-ipc/: notwc-ipc.c
src/: config.c  config.h  decoration.c  dnd.c  gamma_control.c  gamma_control.h  helpers.c  helpers.h  ipc.c  ipc.h  ipc2.c  keybinds.c  keybinds.h  keyboard.c  keyboard.h  layer_surface.c  layer_surface.h  layout.c  layout.h  mwc.c  mwc.h  notwc.c  notwc.h  output.c  output.h  owl.c  owl.h  pointer.c  pointer.h  popup.c  popup.h  rendering.c  rendering.h  session_lock.c  session_lock.h  something.c  something.h  text_buffer.c  text_buffer.h  toplevel.c  (+3 more)
util/: array.h  ipc_shared.h
